# NeuralPlayer

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
AudioFilePlayerPlugin/: .gitignore  .gitrepo  AudioFilePlayer.jucer  CMakeLists.txt
AudioFilePlayerPlugin/CMake/: FindJUCE.cmake
AudioFilePlayerPlugin/CMake/inactive/: FindRoliBlocksBasics.cmake
AudioFilePlayerPlugin/Source/: AudioThumbnailComp.cpp  AudioThumbnailComp.h  AudioThumbnailComponent.cpp  AudioThumbnailComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Player/: CMakeLists.txt
Player/Doc/: Author field substring finding logic.txt
Player/Lib/MidiFile/: MidiFileWriter.cpp  MidiFileWriter.h
Player/Lib/Model/: Notes.h
Player/Lib/onnxruntime/Darwin/: lipo.txt
Player/Lib/onnxruntime/Darwin/Universal/Release/: libonnxruntime.dylib
Player/Resources/: Playlist.xml  TrueSurvivor.mid  Yee.mid
Player/Source/: AudioThumbnailComp.cpp  AudioThumbnailComp.h  AudioThumbnailComponent.cpp  AudioThumbnailComponent.h  ConsoleViewComponent.cpp  ConsoleViewComponent.h  Converters.h  CustomMidiKeyboardComponent.h  DataStructures.h  Main.cpp  MainViewComponent.cpp  MainViewComponent.h  Paths.h  Player.cpp  Player.h  PlayerComponent.cpp  PlayerComponent.h  PlaylistComponent.h  SettingsComponent.cpp  SettingsComponent.h  SharedAudioDeviceManager.cpp  SharedAudioDeviceManager.h  SidePanelHeader.cpp  SidePanelHeader.h  SourceSepMIDIRenderingThread.h  SpleeterRTBinRenderingThread.h  VectorPathData.h  VisualizerThread.h
SpleeterRT/Executable/: CMakeLists.txt  SpleeterRT.vcxproj  SpleeterRT.vcxproj.filters  args.txt  gemm.c  libsr_common.h  libsr_samplerate.c  libsr_src_config.h  libsr_src_sinc.c  main.c
SpleeterRT/Executable/SpleeterRT.xcodeproj/: project.pbxproj
SpleeterRT/Executable/SpleeterRT.xcodeproj/project.xcworkspace/xcuserdata/zendev.xcuserdatad/: UserInterfaceState.xcuserstate
SpleeterRT/Executable/SpleeterRT.xcodeproj/xcshareddata/xcschemes/: SpleeterRT.xcscheme
SpleeterRT/Executable/SpleeterRT.xcodeproj/xcuserdata/zendev.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SpleeterRT/Executable/SpleeterRT.xcodeproj/xcuserdata/zendev.xcuserdatad/xcschemes/: xcschememanagement.plist
Visualizers/projectM/frontend-sdl2/: CMakeLists.txt
Visualizers/projectM/frontend-sdl2/cmake/: FindBoost.cmake  FindPoco.cmake  FindSDL2.cmake  SDL2Target.cmake  projectM4Config.cmake  projectM4PlaylistConfig.cmake  projectM4PlaylistConfigVersion.cmake  projectM4PlaylistTargets.cmake  projectM4Targets.cmake
Visualizers/projectM/frontend-sdl2/creamofthecrop_20200216/: README.txt  RemovedPresets.txt
Visualizers/projectM/frontend-sdl2/creamofthecrop_20200216/User Profile/: Default NestDrop Bundle.xml
Visualizers/projectM/frontend-sdl2/isoscelesmashup_20200817/: README.txt
Visualizers/projectM/frontend-sdl2/isoscelesmashup_20200817/Presets/Dancer/Blobby Mirror/: Isosceles Mashup 20200413 v008.milk  Isosceles Mashup 20200413 v009.milk  Isosceles Mashup 20200413 v010.milk  Isosceles Mashup 20200413 v011.milk  Isosceles Mashup 20200413 v012.milk  (+10 more)
Visualizers/projectM/frontend-sdl2/neuralplayerinactive_20230529/: readme --important info--.txt
Visualizers/projectM/frontend-sdl2/neuralplayerinactive_20230529/Presets/: flexi - target practice.milk  martin - simple spectrum(edited) - Copy.milk  martin - simple spectrum(edited).milk  martin - simple spectrum(edited)2.milk  martin - simple spectrum.milk  xmuzack + martin + derekwhitton95 + skipper - swim into the stormy spectrum seas(storm edit).milk  xmuzack + martin + raron + Krash + Eo.S. - music in the blue horizon(hills).milk  xmuzack + martin + raron + Krash + Eo.S. - music in the blue horizon(no hills).milk  xmuzack + martin +derekwhitton95 + skipper - swim into the stormy spectrum seas.milk  xmuzzack + martin + derekwhitton95 - the city of spectrum.milk
Visualizers/projectM/frontend-sdl2/neuralplayertesting_20230529/: readme --important info--.txt
Visualizers/projectM/frontend-sdl2/src/: CMakeLists.txt  ProjectMWrapper.h
Visualizers/projectM/frontend-sdl2/tryptonaut_20120420/: readme --important info--.txt
Visualizers/projectM/frontend-sdl2/tryptonaut_20120420/Presets/: .MilkTop HDFX Presets  Ft Aderrasi,AdamFX,RovaStar,ShadowHarlequin,Martin n Flexi - BitStorm AftermathFX .J.milk  Aderrasi - Songflower (Moss Posy).milk  Bmelgren & Rovastar - Schisathing 2 - mash0000 - schrodinger's dog massage.milk  Eo.S. - glowsticks v2 05 and proton lights (+Krash's beat code) _Phat_remix07 recursive demons.milk  Eo.S. - repeater 15 - kaleidoscope b.milk  Geiss - Fog Tunnel.milk  Geiss - Inkblot.milk  Goody + flexi - Irdu Lili.milk  Idiot - What Is.milk  Illusion & Rovastar - Clouded Bottle.milk  Krash & Rovastar - A Million Miles from Earth (Ripple Mix).milk  Krash & Rovastar - The Devil Is In The Details.milk  LuxXx - Hurty Soul I.milk  PieturP - triptrap_(getting_concrete_visions_through_a_diafragma_version).milk  Redi Jedi - i dont think those were portabello mushrooms.milk  Rovastar & Idiot24-7 - Balk Acid.milk  Rovastar & Unchained - Demonology (Vampire Soul Mix).milk  Rovastar - Explosive Minds.milk  Rovastar - Fractopia (Galaxy Swirl Mix).milk  Rovastar - Fractopia (Upspoken Mix)_Phat_Speak_When_Spoken_2.milk  Rovastar - Inner Thoughts (Frantic Thoughts Mix).milk  Rovastar - Solarized Space.milk  Rovastar - Tripmaker.milk  Rozzor - Learning Curve (Invert Tweak).milk  Stahlregen & Flexi + Geiss + Rovastar + Unchained - Blurred Echoes (reflecto fucukp).milk  Studio Music and Unchained - Rapid Alteration.milk  Unchained & Rovastar - Luckless.milk  Unchained & Rovastar - Rainbow Obscura.milk  Unchained - Beat Demo 1.0.milk  Unchained - Housed In A Childish Mind.milk  Unchained - In Memory Of Peg.milk  Unchained - Making a Science of It 4.milk  Unchained - Picture Of Exile.milk  Unchained - Picture Of Poison.milk  Unchained - ReAwoke.milk  Unchained - Ribald Ballad.milk  Unchained - Unified Drag 2.milk  Zylot & Krash - Snowflake Halo (Ice Cube mix).milk  a crappy reality = you did well.milk  martin - gentle happiness.milk  (+2 more)
(+1160 files in other folders)
